--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="height=device-height, width=device-width, initial-scale=1.0" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<title>Later</title>
 		<link
 			href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,100..900;1,100..900&family=Playpen+Sans:wght@100..800&display=swap"
 			rel="stylesheet"
